# phicite

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
docs/roadmap/: abac_frameworks_and_platforms.md  airgap_iam.md  jwt_during_startup_phase.md  open_source_iam.md  rbac_abac.md
phicite/: .dockerignore  Dockerfile  Dockerfile.prod  abac_model.conf  abac_policy.csv  prod_testing.py  pyproject.toml  requirements-dev.txt  requirements.txt
phicite/app/: auth.py  config.py  db.py  main.py  summarizer.py
phicite/app/api/: citations.py  crud.py  highlights.py  ping.py  summaries.py  users.py
phicite/app/models/: pydantic.py  tortoise.py
phicite/migrations/models/: 0_20250524112807_init.py  0_20250602220255_init.py  0_20250607123858_init.py  1_20250612012633_update.py  2_20250619115427_add_doi_index.py
phicite/tests/: conftest.py  test_abac.py  test_citations.py  test_citations_unit.py  test_doi_validator.py  test_highlights.py  test_highlights_unit.py  test_models.py  test_ping.py  test_summaries.py  test_summaries_unit.py  test_users.py  test_users_unit.py
