[project]
name = "phicite"
version = "0.1.0"
description = "Annotate documents"
authors = [
    { name = "Paul Adamson", email = "paul@seekingeta.ai" },
]
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn (==0.34.1)",
    "pydantic-settings (==2.8.1)",
    "asyncpg (==0.30.0)",
    "tortoise-orm (==0.25.0)",
    "aerich[toml] (==0.8.2)",
    "gunicorn (==22.0.0)",
    "lxml-html-clean (==0.4.2)",
    "newspaper3k (==0.2.8)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "zxcvbn (>=4.5.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "casbin (>=1.43.0,<2.0.0)",
]
package-mode = false

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
httpx = "==0.28.1"
pytest-cov = "==6.1.1"
ruff = "^0.11.7"
python-dotenv = "^1.1.0"
pytest-xdist = "3.6.1"
requests = "^2.32.3"
pytest-asyncio = "^1.0.0"

